# compliance-contracts

./: calculations.ods  notes.txt  test.2.sh  test.sh
contracts/: CMakeLists.txt
contracts/client/: CMakeLists.txt
contracts/client/include/: client.hpp
contracts/client/src/: CMakeLists.txt  client.cpp
contracts/mock.lease/: CMakeLists.txt
contracts/mock.lease/src/: mock.lease.cpp
contracts/provider/: CMakeLists.txt
contracts/provider/include/: compliance-common.hpp  provider-common.hpp  provider.hpp  verification_registry.hpp
contracts/provider/src/: CMakeLists.txt  client.cpp  provider.cpp
contracts/test/: CMakeLists.txt
contracts/test/include/: compliance-common.hpp  test.hpp
contracts/test/src/: test.cpp
contracts/verification_registry/: CMakeLists.txt  README.txt
contracts/verification_registry/src/: CMakeLists.txt  verification_registry.cpp
contracts/worbli.compliance/: CMakeLists.txt
contracts/worbli.compliance/include/: compliance-common.hpp  worbli.compliance.hpp
contracts/worbli.compliance/src/: CMakeLists.txt  worbli.compliance.cpp
contracts/worbli.prov/: CMakeLists.txt  README.txt
contracts/worbli.prov/include/: worbli.prov.common.hpp  worbli.prov.hpp
contracts/worbli.prov/src/: CMakeLists.txt  worbli.prov.cpp
contracts/worbli.reg/: CMakeLists.txt
contracts/worbli.reg/include/: worbli.reg.common.hpp  worbli.reg.hpp
contracts/worbli.reg/src/: CMakeLists.txt  worbli.reg.cpp
contracts/worbli.resource/: CMakeLists.txt
contracts/worbli.resource/include/: metric.hpp  worbli.resource.hpp
tests/: contracts.hpp.in  eosio.system_tester.hpp  provider_tests.cpp  worbli.compliance_tests.cpp  worbli.system_tester.hpp  worbli_compliance_tester.hpp  worbli_reg_tests.cpp  worbli_resource_tester.hpp  worbli_resource_tests.cpp  worbli_tester.hpp
(+6 files in other folders)
