project(worbli.compliance)

set(EOSIO_WASM_OLD_BEHAVIOR "Off")
find_package(eosio.cdt)

add_contract( worbli.compliance worbli.compliance worbli.compliance.cpp )
target_include_directories( worbli.compliance PUBLIC ${CMAKE_SOURCE_DIR}/../include )
target_ricardian_directory( worbli.compliance ${CMAKE_SOURCE_DIR}/../ricardian )